d/changelog: Fix typoes spotted by lintian
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,7 +12,7 @@ debhelper (10.5) UNRELEASED; urgency=medium
     for reporting it and Iain Lane for tracing it to the commit
     that introduced the issue.  (Closes: #863887)
   * dh_clean, dh_prep: Bulk delete most files and directories, which
-    gives a noticable speed up for source packages building many
+    gives a noticeable speed up for source packages building many
     binary packages.
   * dh_shlibdeps: Avoid creating debian/<pkg>/DEBIAN directory if it
     is not needed.
@@ -34,7 +34,7 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * dh_shlibdeps: Ditto.
   * dh_md5sums: Ditto.
   * dh_builddeb: Rewrite the hand-written parallel code to use the new
-    simplier way of doing it.
+    simpler way of doing it.
   * dh_shlibdeps: Avoid calling file(1) on debug symbols.
   * SUPPORT-POLICY: Include new document that describes the current
     support policy of debhelper compat levels.
@@ -52,7 +52,7 @@ debhelper (10.5) UNRELEASED; urgency=medium
     a lintian warning.
   * dh_installman: In compat 11, attempt to detect the language of the
     manpage based on the directory (/man/<LANG>/manX/) before using the
-    extention.  This is more reliably for packages using dh_installman
+    extension.  This is more reliably for packages using dh_installman
     to install manpages from the temporary install dir.
     (Closes: #761024)
   * dh_installcatalogs: Check the return code of close when generating
@@ -5688,7 +5688,7 @@ debhelper (3.0.0) unstable; urgency=low
 
   * Added dh_installman, a new program that replaces dh_installmanpages.
     It is not DWIM. You tell it what to install and it figures out where 
-    based on .TH section field and filename extention. I reccommend everyone
+    based on .TH section field and filename extension. I reccommend everyone
     begin using it, since this is much better then dh_installmanpages's
     evilness. I've been meaning to do this for a very long time..
     Closes: #38673, #53964, #64297, #16933, #17061, #54059, #54373, #61816
@@ -5759,7 +5759,7 @@ debhelper (2.2.18) unstable; urgency=medium
 
 debhelper (2.2.17) unstable; urgency=medium
 
-  * dh_installdebconf: marge in templates with a .ll_LL extention,
+  * dh_installdebconf: marge in templates with a .ll_LL extension,
     they were previously ignored.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 29 Jan 2001 13:05:21 -0800
