--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-debhelper (10.5) UNRELEASED; urgency=medium
+debhelper (10.5) unstable; urgency=medium
+
+  * Upload to unstable.  (Closes: #865363)
 
   [ Niels Thykier ]
   * dh_installman: Remove unncessary "chown" call that made things a
@@ -75,7 +77,7 @@ debhelper (10.5) UNRELEASED; urgency=medium
     (Closes: #858467)
   * Dh_Lib: Split package_arch($package) into three distinct functions.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 04 Jun 2017 11:09:56 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 17:00:00 +0000
 
 debhelper (10.4) experimental; urgency=medium
 
