Dh_Lib: Fix rounding error causing off-by-one threads
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (10.5.1) UNRELEASED; urgency=medium
+
+  * Dh_Lib.pm: Fix rounding error when computing how many processes
+    to use.  This rounding error could cause dh-tools to use one more
+    process than permitted by DEB_BUILD_OPTIONS.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000
+
 debhelper (10.5) unstable; urgency=medium
 
   * Upload to unstable.  (Closes: #865363)
