--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debhelper (10.5.1) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Fix rounding error when computing how many processes
     to use.  This rounding error could cause dh-tools to use one more
     process than permitted by DEB_BUILD_OPTIONS.
+  * Dh_Lib.pm: Check return value of open+close when creating a log of
+    installed files.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000
 
