dh_installman: Use rename_path instead of doit
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ debhelper (10.5.1) UNRELEASED; urgency=medium
   * dh_strip: Ditto.
   * Dh_Lib: Avoid 1-2 stat calls in make_symlink by reusing existing
     stat calls.
+  * dh_installman: Avoid a fork+exec for renaming a path.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000
 
