Avoid some unnecessary stat calls
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,9 @@ debhelper (10.5.1) UNRELEASED; urgency=medium
   * Dh_Lib: Avoid 1-2 stat calls in make_symlink by reusing existing
     stat calls.
   * dh_installman: Avoid a fork+exec for renaming a path.
+  * dh_installdocs: Avoid unnecssary stat call.
+  * dh_installman: Ditto.
+  * dh_strip: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000
 
