--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,9 @@ debhelper (10.5.1) UNRELEASED; urgency=medium
   * dh_installdocs: Avoid unnecssary stat call.
   * dh_installman: Ditto.
   * dh_strip: Ditto.
+  * dh_shlibdeps: Fix a regression where non-detached debug symbol files
+    where not properly processed.  Thanks to Sven Joachim for reporting
+    the issue.  (Closes: #865982)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000
 
