--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,9 @@ debhelper (10.5.1) UNRELEASED; urgency=medium
   * dh_installman: When re-encoding manpages, use the actual manpages as
     tasks to split rather than packages.  This provides a much better
     performance if the manpages are unevenly split between the packages.
+  * dh_install: Optimize some patterns into bulked "cp" calls.  This
+    optimization is only applicable in some cases (notably, it is always
+    disabled by --exclude).
 
  -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000
 
