dh_builddeb: Add dbgsym packages as separate tasks
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,8 @@ debhelper (10.5.1) UNRELEASED; urgency=medium
   * dh_install: Optimize some patterns into bulked "cp" calls.  This
     optimization is only applicable in some cases (notably, it is always
     disabled by --exclude).
+  * dh_builddeb: Account for dbgsym packages separately when determining
+    how many tasks can be run in parallel.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000
 
