dh_strip: Process packages in parallel
Re-indent of code pending next commit...

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ debhelper (10.5.1) UNRELEASED; urgency=medium
     disabled by --exclude).
   * dh_builddeb: Account for dbgsym packages separately when determining
     how many tasks can be run in parallel.
+  * dh_strip: Process packages in parallel.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000
 
