d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -825,7 +825,7 @@ debhelper (9.20151004) unstable; urgency=medium
     with --list-missing.  Thanks to Peter Eisentraut for the
     suggestion.  (Closes: #436240)
   * Dh_Lib: Cherry-pick patch from Chris Lamb to only read
-    the latest changelog entry when determing the
+    the latest changelog entry when determining the
     SOURCE_DATE_EPOCH.
   * debhelper.7: Provide a better example of how to insert
     the debhelper maintainer script snippets into a maintainer
