--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.5.1) UNRELEASED; urgency=medium
+debhelper (10.5.1) unstable; urgency=medium
 
   * Dh_Lib.pm: Fix rounding error when computing how many processes
     to use.  This rounding error could cause dh-tools to use one more
@@ -35,7 +35,7 @@ debhelper (10.5.1) UNRELEASED; urgency=medium
     how many tasks can be run in parallel.
   * dh_strip: Process packages in parallel.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 26 Jun 2017 17:25:00 +0000
 
 debhelper (10.5) unstable; urgency=medium
 
