--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.5.2) UNRELEASED; urgency=medium
+
+  * dh_installinfo: Use "xargs" so it works even if there are
+    "a lot" of info files.
+
+ -- Niels Thykier <niels@thykier.net>  Tue, 27 Jun 2017 17:29:32 +0000
+
 debhelper (10.5.1) unstable; urgency=medium
 
   * Dh_Lib.pm: Fix rounding error when computing how many processes
