d/changelog: Add entry and bump to 10.6
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
-debhelper (10.5.2) UNRELEASED; urgency=medium
+debhelper (10.6) UNRELEASED; urgency=medium
 
   * dh_installinfo: Use "xargs" so it works even if there are
     "a lot" of info files.
+  * Dh_Lib: Introduce a is_build_profile_active function, which
+    can be used to check if a given Build-Profile was specified.
 
  -- Niels Thykier <niels@thykier.net>  Tue, 27 Jun 2017 17:29:32 +0000
 
