--- a/debhelper.pod
+++ b/debhelper.pod
@@ -678,6 +678,13 @@ F<debian/tmp> like B<dh_install>.
 
 =item -
 
+The B<perl-makemaker> and B<perl-build> build systems no longer pass
+B<-I.> to perl.  Packages that still need this behaviour can get
+emulate it by using the B<PERL5LIB> environment variable.  E.g. by
+adding B<export PERL5LIB=.> in their debian/rules file (or similar).
+
+=item -
+
 The B<PERL_USE_UNSAFE_INC> environment variable is no longer set by
 B<dh> or any of the B<dh_auto_*> tools.  It was added as a temporary
 work around to avoid a lot of packages failing to build at the same
