dh_installman: Fix regression in compat 5
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debhelper (10.6) UNRELEASED; urgency=medium
     Note that dh_installdocs is not a complete noop in this case
     as it still ensures the package has a copyright file (or a
     symlinked doc directory).  (Closes: #865869)
+  * dh_installman: Fix regression in compat 5 that could make it
+    ignore one manpage per invocation.
 
  -- Niels Thykier <niels@thykier.net>  Tue, 27 Jun 2017 17:29:32 +0000
 
