Revert "dh_installdocs: Install use dir of mainpackage (C11)"
This reverts commit 71007f72da682dd9d7f932d81ca2ecd5d46a0e70
(plus effectively 6c946cd0bb239a4fd02e7acbcb797ecccfb0e3cb).

The policy said "X-doc => X" not "X-doc => main package", so the
current implementation was insufficient.  Roll it back while we
figure out a better way to do this.

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,8 @@ debhelper (10.6) UNRELEASED; urgency=medium
   * dh_installman: Ditto.
   * dh_installman: Fix bug in how it handled language auto-detection in
     compat 11.  Previously, it did not work as intended.
+  * dh_installdocs: Revert change in compat 11, where it would install
+    documentation into /usr/share/doc/mainpackage.  (Reopens: #824221)
 
  -- Niels Thykier <niels@thykier.net>  Tue, 27 Jun 2017 17:29:32 +0000
 
