d/changelog: Document recent changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,9 @@ debhelper (10.6) UNRELEASED; urgency=medium
     compat 11.  Previously, it did not work as intended.
   * dh_installdocs: Revert change in compat 11, where it would install
     documentation into /usr/share/doc/mainpackage.  (Reopens: #824221)
+  * Dh_Lib: Stop setting PERL_USE_UNSAFE_INC in compat 11.
+  * perl_build.pm: Stop passing -I. to perl in compat 11.
+  * perl_makemaker.pm: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Tue, 27 Jun 2017 17:29:32 +0000
 
