--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.6) UNRELEASED; urgency=medium
+debhelper (10.6) unstable; urgency=medium
 
   * dh_installinfo: Use "xargs" so it works even if there are
     "a lot" of info files.
@@ -38,7 +38,7 @@ debhelper (10.6) UNRELEASED; urgency=medium
   * perl_build.pm: Stop passing -I. to perl in compat 11.
   * perl_makemaker.pm: Ditto.
 
- -- Niels Thykier <niels@thykier.net>  Tue, 27 Jun 2017 17:29:32 +0000
+ -- Niels Thykier <niels@thykier.net>  Thu, 29 Jun 2017 17:15:00 +0000
 
 debhelper (10.5.1) unstable; urgency=medium
 
