d/changelog: Document the changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.6.1) UNRELEASED; urgency=medium
+
+  * Makefile: Enable running some tasks in parallel to better
+    utilize multiple cores.
+
+ -- Niels Thykier <niels@thykier.net>  Thu, 29 Jun 2017 19:44:14 +0000
+
 debhelper (10.6) unstable; urgency=medium
 
   * dh_installinfo: Use "xargs" so it works even if there are
