Revert "glob_expand: Special-case "." as dir"
This reverts commit 25e56c374cb7f6ea3da8b8046764b36caa56ea02.

Turns out this breaks the world if people use entries with leading
slash (and they do).

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ debhelper (10.6.1) UNRELEASED; urgency=medium
 
   * Makefile: Enable running some tasks in parallel to better
     utilize multiple cores.
+  * Dh_Lib: Revert a change that caused dh_install (and other
+    tools) to take filenames as absolute if they started with
+    a leading slash.  Thanks to Sven Joachim for the prompt
+    discovery and notification.  (Closes: #866570)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 29 Jun 2017 19:44:14 +0000
 
