dh_install: Guard optimization in a compat bump
It breaks in the following case:

  "bin/l* bin/*s bin"

Assuming debian/tmp/bin contains "ls", then there are now two files to
the same location, which makes cp unhappy.  It also happens for
libindicate, where the it have a gtk-2 and gtk-3 variant of files that
happen to clash for similar reasons.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -695,6 +695,13 @@ to drop support for the B<PERL_USE_UNSAFE_INC> environment variable.
 When perl drops support for it, then this variable will be removed
 retroactively from existing compat levels as well.
 
+=item -
+
+B<dh_install> now attempts to optimize installations by bulking files
+together.  Generally, this should just silently make things faster.
+However, it can cause issues if multiple patterns expand to the same
+target file.
+
 =back
 
 =back
