--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debhelper (10.6.1) UNRELEASED; urgency=medium
     tools) to take filenames as absolute if they started with
     a leading slash.  Thanks to Sven Joachim for the prompt
     discovery and notification.  (Closes: #866570)
+  * dh_install: Make optimization conditional on compat 11
+    for now.  (Closes: #866405)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 29 Jun 2017 19:44:14 +0000
 
