--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.6.1) UNRELEASED; urgency=medium
+debhelper (10.6.1) unstable; urgency=medium
 
   * Makefile: Enable running some tasks in parallel to better
     utilize multiple cores.
@@ -9,7 +9,7 @@ debhelper (10.6.1) UNRELEASED; urgency=medium
   * dh_install: Make optimization conditional on compat 11
     for now.  (Closes: #866405)
 
- -- Niels Thykier <niels@thykier.net>  Thu, 29 Jun 2017 19:44:14 +0000
+ -- Niels Thykier <niels@thykier.net>  Fri, 30 Jun 2017 06:50:10 +0000
 
 debhelper (10.6) unstable; urgency=medium
 
