dh_compress: Remove target before creating fixup symlink
The target might already exist, possible because it had been created
by dh_link before.

Regression introduced by the switch to make_symlink_raw_target in
commit ee8fd59af61fa4739cdd536ecbb492cc8520df40.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (10.6.2) UNRELEASED; urgency=medium
 
   * Refactor test suite and support running tests in parallel.
   * Add a test case for #866570.
+  * dh_compress: Apply patch from Sven Joachim to fix a
+    regression in 10.5.1.  (Closes: #866713)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 03 Jul 2017 14:39:11 +0000
 
