--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.6.2) UNRELEASED; urgency=medium
+
+  * Refactor test suite and support running tests in parallel.
+  * Add a test case for #866570.
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 03 Jul 2017 14:39:11 +0000
+
 debhelper (10.6.1) unstable; urgency=medium
 
   * Makefile: Enable running some tasks in parallel to better
