--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,10 @@ debhelper (10.6.2) UNRELEASED; urgency=medium
   * Add a test case for #866570.
   * dh_compress: Apply patch from Sven Joachim to fix a
     regression in 10.5.1.  (Closes: #866713)
+  * dh_installman: Fix regression introduced in 10.5.1 that
+    caused a "file not found" error when using -P with an
+    absolute argument.  Thanks to Adrian Bunk for reporting
+    it over IRC.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 03 Jul 2017 14:39:11 +0000
 
