--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.6.2) UNRELEASED; urgency=medium
+debhelper (10.6.2) unstable; urgency=medium
 
   * Refactor test suite and support running tests in parallel.
   * Add a test case for #866570.
@@ -9,7 +9,7 @@ debhelper (10.6.2) UNRELEASED; urgency=medium
     absolute argument.  Thanks to Adrian Bunk for reporting
     it over IRC.
 
- -- Niels Thykier <niels@thykier.net>  Mon, 03 Jul 2017 14:39:11 +0000
+ -- Niels Thykier <niels@thykier.net>  Wed, 05 Jul 2017 08:40:00 +0000
 
 debhelper (10.6.1) unstable; urgency=medium
 
