dh_install: Bulk install sources
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ debhelper (10.6.3) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Embed tool versions into autoscripts so lintian can
     extract and display them.  Tools that want to rely on this
     feature should set "$main::VERSION" to the version of the tool.
+  * dh_install: Rewrite and re-nable optimization so it
+    deterministically and gracefully handles cases like #866405.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 05 Jul 2017 15:51:48 +0000
 
