Makefile: Optimize dpkg-parsechangelog call
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.6.3) UNRELEASED; urgency=medium
+
+  * Makefile: Use "dpkg-parsechangelog -S" rather than
+    "dpkg-parsechangelog | grep".
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 05 Jul 2017 15:51:48 +0000
+
 debhelper (10.6.2) unstable; urgency=medium
 
   * Refactor test suite and support running tests in parallel.
