--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -771,20 +771,20 @@ msgstr ""
 #: debhelper.pod:279
 msgid ""
 "Tell debhelper what compatibility level to use by writing a number to "
-"F<debian/compat>. For example, to use v9 mode:"
+"F<debian/compat>. For example, to use v#RECOMMEDED_COMPAT# mode:"
 msgstr ""
 "Schreiben Sie eine Zahl nach F<debian/compat>, um Debhelper mitzuteilen, "
-"welche Kompatibilitätsstufe es nutzen soll. Um beispielsweise den Modus V9 "
+"welche Kompatibilitätsstufe es nutzen soll. Um beispielsweise den Modus V#RECOMMEDED_COMPAT# "
 "zu benutzen, geben Sie Folgendes ein:"
 
 #. type: verbatim
 #: debhelper.pod:282
 #, no-wrap
 msgid ""
-"  % echo 9 > debian/compat\n"
+"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
 "\n"
 msgstr ""
-"  % echo 9 > debian/compat\n"
+"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
 "\n"
 
 #. type: textblock
@@ -792,21 +792,21 @@ msgstr ""
 msgid ""
 "Your package will also need a versioned build dependency on a version of "
 "debhelper equal to (or greater than) the compatibility level your package "
-"uses. So for compatibility level 9, ensure debian/control has:"
+"uses. So for compatibility level #RECOMMEDED_COMPAT#, ensure debian/control has:"
 msgstr ""
 "Ihr Paket wird außerdem eine Bauabhängigkeit mit Versionspflege auf eine "
 "Debhelper-Version benötigen, die gleich (oder größer) als die ist, die von "
 "der Kompatibilitätsstufe Ihres Pakets verwandt wird. Daher müssen Sie für "
-"Kompatibilitätsstufe 9 sicherstellen, dass debian/control Folgendes hat:"
+"Kompatibilitätsstufe #RECOMMEDED_COMPAT# sicherstellen, dass debian/control Folgendes hat:"
 
 #. type: verbatim
 #: debhelper.pod:288
 #, no-wrap
 msgid ""
-"  Build-Depends: debhelper (>= 9)\n"
+"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
 "\n"
 msgstr ""
-"  Build-Depends: debhelper (>= 9)\n"
+"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
 "\n"
 
 #. type: textblock
