--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -831,21 +831,21 @@ msgstr ""
 #: debhelper.pod:279
 msgid ""
 "Tell debhelper what compatibility level to use by writing a number to "
-"F<debian/compat>. For example, to use v9 mode:"
+"F<debian/compat>. For example, to use v#RECOMMEDED_COMPAT# mode:"
 msgstr ""
 "Pour indiquer à debhelper le niveau de compatibilité à utiliser il faut "
 "placer un nombre dans F<debian/compat>. Par exemple, pour exploiter la "
-"version 9 :"
+"version #RECOMMEDED_COMPAT# :"
 
 # type: verbatim
 #. type: verbatim
 #: debhelper.pod:282
 #, no-wrap
 msgid ""
-"  % echo 9 > debian/compat\n"
+"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
 "\n"
 msgstr ""
-" % echo 9 > debian/compat\n"
+" % echo #RECOMMEDED_COMPAT# > debian/compat\n"
 "\n"
 
 # type: textblock
@@ -854,11 +854,11 @@ msgstr ""
 msgid ""
 "Your package will also need a versioned build dependency on a version of "
 "debhelper equal to (or greater than) the compatibility level your package "
-"uses. So for compatibility level 9, ensure debian/control has:"
+"uses. So for compatibility level #RECOMMEDED_COMPAT#, ensure debian/control has:"
 msgstr ""
 "Le paquet nécessitera aussi une version de debhelper dans les dépendances de "
 "construction au moins égale au niveau de compatibilité utilisée pour la "
-"construction du paquet. Ainsi, si le paquet emploie le niveau 9 de "
+"construction du paquet. Ainsi, si le paquet emploie le niveau #RECOMMEDED_COMPAT# de "
 "compatibilité, F<debian/control> devra contenir :"
 
 # type: verbatim
@@ -866,10 +866,10 @@ msgstr ""
 #: debhelper.pod:288
 #, no-wrap
 msgid ""
-"  Build-Depends: debhelper (>= 9)\n"
+"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
 "\n"
 msgstr ""
-" Build-Depends: debhelper (>= 9)\n"
+" Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
 "\n"
 
 # type: textblock
