--- a/man/po4a/po/ja.po
+++ b/man/po4a/po/ja.po
@@ -752,19 +752,19 @@ msgstr ""
 #: debhelper.pod:279
 msgid ""
 "Tell debhelper what compatibility level to use by writing a number to "
-"F<debian/compat>. For example, to use v9 mode:"
+"F<debian/compat>. For example, to use v#RECOMMEDED_COMPAT# mode:"
 msgstr ""
 "数字を F<debian/compat> に記述して、debhelper にどの互換性レベルを使うかを教"
-"えます。例えば、v9 モードを使うには次の様にします:"
+"えます。例えば、v#RECOMMEDED_COMPAT# モードを使うには次の様にします:"
 
 #. type: verbatim
 #: debhelper.pod:282
 #, no-wrap
 msgid ""
-"  % echo 9 > debian/compat\n"
+"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
 "\n"
 msgstr ""
-"  % echo 9 > debian/compat\n"
+"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
 "\n"
 
 #. type: textblock
@@ -772,20 +772,20 @@ msgstr ""
 msgid ""
 "Your package will also need a versioned build dependency on a version of "
 "debhelper equal to (or greater than) the compatibility level your package "
-"uses. So for compatibility level 9, ensure debian/control has:"
+"uses. So for compatibility level #RECOMMEDED_COMPAT#, ensure debian/control has:"
 msgstr ""
 "パッケージは、利用する互換性レベルと同じ (あるいはそれ以上) のバージョンの "
-"debhelper プログラムをビルド依存として設定する必要があります。互換性レベル 9 "
+"debhelper プログラムをビルド依存として設定する必要があります。互換性レベル #RECOMMEDED_COMPAT# "
 "の場合、debian/control ファイルが以下の様になっていることを確認してください:"
 
 #. type: verbatim
 #: debhelper.pod:288
 #, no-wrap
 msgid ""
-"  Build-Depends: debhelper (>= 9)\n"
+"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
 "\n"
 msgstr ""
-"  Build-Depends: debhelper (>= 9)\n"
+"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
 "\n"
 
 #. type: textblock
