--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -763,19 +763,19 @@ msgstr ""
 #: debhelper.pod:279
 msgid ""
 "Tell debhelper what compatibility level to use by writing a number to "
-"F<debian/compat>. For example, to use v9 mode:"
+"F<debian/compat>. For example, to use v#RECOMMEDED_COMPAT# mode:"
 msgstr ""
 "Diz ao debhelper qual nível de compatibilidade deve usar ao escrever um "
-"número em F<debian/compat>. Por exemplo, para usar o modo v9:"
+"número em F<debian/compat>. Por exemplo, para usar o modo v#RECOMMEDED_COMPAT#:"
 
 #. type: verbatim
 #: debhelper.pod:282
 #, no-wrap
 msgid ""
-"  % echo 9 > debian/compat\n"
+"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
 "\n"
 msgstr ""
-"  % echo 9 > debian/compat\n"
+"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
 "\n"
 
 #. type: textblock
@@ -783,21 +783,21 @@ msgstr ""
 msgid ""
 "Your package will also need a versioned build dependency on a version of "
 "debhelper equal to (or greater than) the compatibility level your package "
-"uses. So for compatibility level 9, ensure debian/control has:"
+"uses. So for compatibility level #RECOMMEDED_COMPAT#, ensure debian/control has:"
 msgstr ""
 "O seu pacote também vai precisar de uma dependência de compilação de versão "
 "de uma versão do debhelper igual (ou maior que) ao nível de compatibilidade "
-"que o seu pacote usa. Portanto para nível de compatibilidade 9, certifique-"
+"que o seu pacote usa. Portanto para nível de compatibilidade #RECOMMEDED_COMPAT#, certifique-"
 "se que debian/control tem:"
 
 #. type: verbatim
 #: debhelper.pod:288
 #, no-wrap
 msgid ""
-"  Build-Depends: debhelper (>= 9)\n"
+"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
 "\n"
 msgstr ""
-"  Build-Depends: debhelper (>= 9)\n"
+"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
 "\n"
 
 #. type: textblock
