debhelper.pod: Add heading just above compat list
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -294,6 +294,8 @@ if you are not using the most recent compatibility level, you're advised to
 read below for notes about what is different in earlier compatibility
 levels.
 
+=head2 Supported compatibility levels
+
 These are the available compatibility levels:
 
 =over 4
