Dh_Lib: Embed tool versions into auto-generated snippets
Use $main::VERSION to determine the version of the tool and embed that
into auto-generated snippets (e.g. via autoscript).  This enables
lintian to extract the tool + version and display it on:

  https://lintian.debian.org/tags/debhelper-autoscript-in-maintainer-scripts.html

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ debhelper (10.6.3) UNRELEASED; urgency=medium
     "dpkg-parsechangelog | grep".
   * debhelper.pod: Use substitution to ensure examples always use the
     recommended compatibility level.
+  * Dh_Lib.pm: Embed tool versions into autoscripts so lintian can
+    extract and display them.  Tools that want to rely on this
+    feature should set "$main::VERSION" to the version of the tool.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 05 Jul 2017 15:51:48 +0000
 
