debhelper.pod: Announce betas on d-d-a@l.d.o OR d-d@l.d.o

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -737,9 +737,11 @@ during the beta.
 
 =item *
 
-We will notify you via debian-devel@lists.debian.org before we start a
+We will notify you via debian-devel-announce@lists.debian.org or
+debian-devel@lists.debian.org before we start a
 new open beta compat level.  However, once the beta starts we expect
-that you keep yourself up to date on changes to debhelper.
+that you keep yourself up to date on changes to debhelper for that
+compat level.
 
 =item *
 
