--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ debhelper (10.6.3) UNRELEASED; urgency=medium
     files, but log what it would have done to avoid making
     dh_missing complain.  Thanks to Michael Stapelberg for
     reporting the issue and testing the fix.  (Closes: #867246)
+  * PROGRAMMING: Document how to write "logging" helpers that work
+    with dh_missing.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 05 Jul 2017 15:51:48 +0000
 
