--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.6.3) UNRELEASED; urgency=medium
+debhelper (10.6.3) unstable; urgency=medium
 
   * Makefile: Use "dpkg-parsechangelog -S" rather than
     "dpkg-parsechangelog | grep".
@@ -18,7 +18,7 @@ debhelper (10.6.3) UNRELEASED; urgency=medium
   * PROGRAMMING: Document how to write "logging" helpers that work
     with dh_missing.
 
- -- Niels Thykier <niels@thykier.net>  Wed, 05 Jul 2017 15:51:48 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 08:24:34 +0000
 
 debhelper (10.6.2) unstable; urgency=medium
 
