Revert "dh_installmenu: Stop installing menu files in compat 11"
This reverts commit c1f102537e9e204deed0eab17c10680f3372a2ba.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.6.4) UNRELEASED; urgency=medium
+
+  * dh_installmenu: Revert "Stop installing menu files in compat 11
+    (menu-methods are still installed)".
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 12:30:20 +0000
+
 debhelper (10.6.3) unstable; urgency=medium
 
   * Makefile: Use "dpkg-parsechangelog -S" rather than
