dh: Revert --without=build-stamp in c11
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debhelper (10.6.4) UNRELEASED; urgency=medium
 
   * dh_installmenu: Revert "Stop installing menu files in compat 11
     (menu-methods are still installed)".
+  * dh: Revert "--without=build-stamp by default in compat 11".  Keep
+    the compat 10 behaviour while enable packages to opt-in by
+    explicitly passing --without=build-stamp themselves.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 12:30:20 +0000
 
