Re-instate bug compatibility to fix #867866
Previous versions of debhelper had "interesting" way of interpreting
arguments where it split them on space.  This was mistakenly
"corrected" in 10.6 when debhelper started to use bsd_glob (that does
not split on spaces).

To resolve this, manully split arguments like the original code would
(effectively) have done so packages are unaffected by it.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,13 @@ debhelper (10.6.4) UNRELEASED; urgency=medium
   * dh_compress: Apply patch from Sven Joachim to make dh_compress
     gracefully handle hardlinks, where the target files already
     exists.  (Closes: #867881)
+  * dh_install: Re-instate bug compatibility with debhelper (<< 10.6)
+    where (some) path arguments where split on space as if it had
+    been parsed in the config file.  (Closes: #867866)
+  * dh_installdocs: Ditto.
+  * dh_installexamples: Ditto.
+  * dh_installinfo: Ditto.
+  * dh_installman: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 12:30:20 +0000
 
