dh_install: Disable bulk install optimization on clashes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,9 @@ debhelper (10.6.4) UNRELEASED; urgency=medium
     native file copying that caused dh_installdocs to no longer replace
     dangling symlinks with real files.  Thanks to Stéphane Glondu
     for the report.  (Closes: #868204)
+  * dh_install: Silently disable bulk optimization when two source paths
+    have the same destination.  Thanks to Gianfranco Costamagna for
+    reporting the regression.  (Closes: #868169)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 12:30:20 +0000
 
