d/control: Set Testsuite: autopkgtest-pkg-perl
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ debhelper (10.6.4) UNRELEASED; urgency=medium
   * dh_install: Silently disable bulk optimization when two source paths
     have the same destination.  Thanks to Gianfranco Costamagna for
     reporting the regression.  (Closes: #868169)
+  * d/control: Set Testsuite to autopkgtest-pkg-perl to enable
+    autopkgtests.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 12:30:20 +0000
 
