--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.6.4) UNRELEASED; urgency=medium
+debhelper (10.6.4) unstable; urgency=medium
 
   * dh_installmenu: Revert "Stop installing menu files in compat 11
     (menu-methods are still installed)".
@@ -31,7 +31,7 @@ debhelper (10.6.4) UNRELEASED; urgency=medium
   * d/control: Set Testsuite to autopkgtest-pkg-perl to enable
     autopkgtests.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 12:30:20 +0000
+ -- Niels Thykier <niels@thykier.net>  Fri, 14 Jul 2017 17:49:46 +0000
 
 debhelper (10.6.3) unstable; urgency=medium
 
