dh_usrlocal: Fix doit-bug that forks a shell
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (10.7) UNRELEASED; urgency=medium
+
+  * dh_usrlocal: Fix call to doit to avoid making it fork a shell.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
+
 debhelper (10.6.4) unstable; urgency=medium
 
   * dh_installmenu: Revert "Stop installing menu files in compat 11
