--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ debhelper (10.7) UNRELEASED; urgency=medium
     the tools have chdir to a different directory.
   * Dh_Lib: Support an optional hashref in doit + doit_* to enable some
     trivial operations in the child process (e.g. redirect stdout).
+  * dh_installman: Avoid forking a shell where a simple subprocess call
+    is sufficient.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
