--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ debhelper (10.7) UNRELEASED; urgency=medium
     substituting into the snippet.  This variant (like the subroutine
     variant) avoids forking a lot of subprocesses and need not worry
     about a shell possible interpreting metacharacters.
+  * dh_installman: Pass "-l" to man when recoding the manpages.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
