dh_*: Migrate most tools to new shell-less autoscript
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,15 @@ debhelper (10.7) UNRELEASED; urgency=medium
     variant) avoids forking a lot of subprocesses and need not worry
     about a shell possible interpreting metacharacters.
   * dh_installman: Pass "-l" to man when recoding the manpages.
+  * dh_icons: Use hashref based autoscripts generation.
+  * dh_installcatalogs: Ditto.
+  * dh_installemacsen: Ditto.
+  * dh_installmenu: Ditto.
+  * dh_installmodules: Ditto.
+  * dh_installwm: Ditto.
+  * dh_installxfonts: Ditto.
+  * dh_systemd_enable: Ditto.
+  * dh_systemd_start: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
