Dh_Lib: (Mostly) avoid shell forking when installing maintscripts
Except one case, this remove all forking of a shell for installing
maintscripts.  The remaining case being the "qx{}" in the perl
subprocess when merging an auto-generated script into a hand-written
one.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,8 @@ debhelper (10.7) UNRELEASED; urgency=medium
   * dh_installxfonts: Ditto.
   * dh_systemd_enable: Ditto.
   * dh_systemd_start: Ditto.
+  * Dh_Lib: Reduce the use of shell and external commands for
+    generating the final maintscripts.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
