d/changelog: Document recent changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 debhelper (10.7) UNRELEASED; urgency=medium
 
   * dh_usrlocal: Fix call to doit to avoid making it fork a shell.
+  * autoconf.pm: Ditto.
+  * cmake.pm: Ditto.
+  * meson.pm: Ditto.
+  * dh_installmodules: Ensure maintscripts are reproducible even with
+    multiple kernel versions detected.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
