--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ debhelper (10.7) UNRELEASED; urgency=medium
   * meson.pm: Ditto.
   * dh_installmodules: Ensure maintscripts are reproducible even with
     multiple kernel versions detected.
+  * Apply patches from gregor herrmann to improve autopkgtests.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
