Dh_Lib: Make getpackages() return *all* packages
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,9 @@ debhelper (10.7) UNRELEASED; urgency=medium
   * dh_systemd_start: Ditto.
   * Dh_Lib: Reduce the use of shell and external commands for
     generating the final maintscripts.
+  * Dh_Lib: Make getpackages without any arguments return all
+    packages as the documentation promises it should.  Previously,
+    it would hide packages not built (e.g. due to Build-Profiles).
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
