--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,12 @@ debhelper (10.7) UNRELEASED; urgency=medium
     on dh_testdir to do this as dh_testdir is called too late.
   * dh: optimize out the call to dh_testdir.  It is useless for
     printing a helpful error message when called by dh.
+  * dh_installdocs: Apply patch from Sven Joachim to revert an
+    incorrect regression "fix".  Thanks to Adrian Bunk for
+    reporting the issue.  (Closes: #868649)
+  * dh_installexamples: Ditto.
+  * dh_installinfo: Ditto.
+  * dh_installman: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
