--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,8 @@ debhelper (10.7) UNRELEASED; urgency=medium
   * Dh_Lib: Provide a better error message when getpackages() is called
     by a helper in the wrong directory.  Unfortunately, dh cannot rely
     on dh_testdir to do this as dh_testdir is called too late.
+  * dh: optimize out the call to dh_testdir.  It is useless for
+    printing a helpful error message when called by dh.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
