dh_gencontrol: Add substvars without using fork+exec
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,9 @@ debhelper (10.7) UNRELEASED; urgency=medium
   * dh_installexamples: Ditto.
   * dh_installinfo: Ditto.
   * dh_installman: Ditto.
+  * dh_gencontrol: Rewrite code that ensures that misc:Depends and
+    misc:Pre-Depends are present to avoid relying external processes
+    for this.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
