--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -553,14 +553,14 @@ msgstr ""
 #: debhelper.pod:279
 msgid ""
 "Tell debhelper what compatibility level to use by writing a number to "
-"F<debian/compat>. For example, to use v#RECOMMEDED_COMPAT# mode:"
+"F<debian/compat>. For example, to use v#RECOMMENDED_COMPAT# mode:"
 msgstr ""
 
 #. type: verbatim
 #: debhelper.pod:282
 #, no-wrap
 msgid ""
-"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+"  % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 "\n"
 msgstr ""
 
@@ -569,7 +569,7 @@ msgstr ""
 msgid ""
 "Your package will also need a versioned build dependency on a version of "
 "debhelper equal to (or greater than) the compatibility level your package "
-"uses. So for compatibility level #RECOMMEDED_COMPAT#, ensure debian/control "
+"uses. So for compatibility level #RECOMMENDED_COMPAT#, ensure debian/control "
 "has:"
 msgstr ""
 
@@ -577,7 +577,7 @@ msgstr ""
 #: debhelper.pod:288
 #, no-wrap
 msgid ""
-"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+"  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 "\n"
 msgstr ""
 
