--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -875,21 +875,21 @@ msgstr ""
 #| "F<debian/compat>. For example, to turn on v9 mode:"
 msgid ""
 "Tell debhelper what compatibility level to use by writing a number to "
-"F<debian/compat>. For example, to use v#RECOMMEDED_COMPAT# mode:"
+"F<debian/compat>. For example, to use v#RECOMMENDED_COMPAT# mode:"
 msgstr ""
 "Para especificar a debhelper qué nivel de compatibilidad debe utilizar, "
 "escriba un número en F<debian/compat>. Por ejemplo, para activar el modo "
-"v#RECOMMEDED_COMPAT#:"
+"v#RECOMMENDED_COMPAT#:"
 
 # type: verbatim
 #. type: verbatim
 #: debhelper.pod:282
 #, no-wrap
 msgid ""
-"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+"  % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 "\n"
 msgstr ""
-"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+"  % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 "\n"
 
 # type: textblock
@@ -898,13 +898,13 @@ msgstr ""
 msgid ""
 "Your package will also need a versioned build dependency on a version of "
 "debhelper equal to (or greater than) the compatibility level your package "
-"uses. So for compatibility level #RECOMMEDED_COMPAT#, ensure debian/control "
+"uses. So for compatibility level #RECOMMENDED_COMPAT#, ensure debian/control "
 "has:"
 msgstr ""
 "El paquete también requiere como dependencia de construcción («build-"
 "depend») una versión de debhelper igual o mayor que el nivel de "
 "compatibilidad de debhelper que utiliza el paquete. Por ejemplo, para "
-"utilizar el nivel de compatibilidad #RECOMMEDED_COMPAT#, compruebe que "
+"utilizar el nivel de compatibilidad #RECOMMENDED_COMPAT#, compruebe que "
 "«debian/control» contiene lo siguiente:"
 
 # type: verbatim
@@ -912,10 +912,10 @@ msgstr ""
 #: debhelper.pod:288
 #, no-wrap
 msgid ""
-"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+"  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 "\n"
 msgstr ""
-"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+"  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 "\n"
 
 # type: textblock
@@ -1687,13 +1687,13 @@ msgstr ""
 #: debhelper.pod:757
 #, fuzzy, no-wrap
 #| msgid ""
-#| "  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+#| "  % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 #| "\n"
 msgid ""
 "  % echo beta-tester > debian/compat\n"
 "\n"
 msgstr ""
-"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+"  % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 "\n"
 
 #. type: textblock
@@ -1706,13 +1706,13 @@ msgstr ""
 #: debhelper.pod:761
 #, fuzzy, no-wrap
 #| msgid ""
-#| "  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+#| "  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 #| "\n"
 msgid ""
 "  Build-Depends: debhelper (>= 9.20160815~)\n"
 "\n"
 msgstr ""
-"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+"  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 "\n"
 
 #. type: textblock
