--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -831,21 +831,21 @@ msgstr ""
 #: debhelper.pod:279
 msgid ""
 "Tell debhelper what compatibility level to use by writing a number to "
-"F<debian/compat>. For example, to use v#RECOMMEDED_COMPAT# mode:"
+"F<debian/compat>. For example, to use v#RECOMMENDED_COMPAT# mode:"
 msgstr ""
 "Pour indiquer à debhelper le niveau de compatibilité à utiliser il faut "
 "placer un nombre dans F<debian/compat>. Par exemple, pour exploiter la "
-"version #RECOMMEDED_COMPAT# :"
+"version #RECOMMENDED_COMPAT# :"
 
 # type: verbatim
 #. type: verbatim
 #: debhelper.pod:282
 #, no-wrap
 msgid ""
-"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+"  % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 "\n"
 msgstr ""
-" % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+" % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 "\n"
 
 # type: textblock
@@ -854,13 +854,13 @@ msgstr ""
 msgid ""
 "Your package will also need a versioned build dependency on a version of "
 "debhelper equal to (or greater than) the compatibility level your package "
-"uses. So for compatibility level #RECOMMEDED_COMPAT#, ensure debian/control "
+"uses. So for compatibility level #RECOMMENDED_COMPAT#, ensure debian/control "
 "has:"
 msgstr ""
 "Le paquet nécessitera aussi une version de debhelper dans les dépendances de "
 "construction au moins égale au niveau de compatibilité utilisée pour la "
 "construction du paquet. Ainsi, si le paquet emploie le "
-"niveau #RECOMMEDED_COMPAT# de compatibilité, F<debian/control> devra "
+"niveau #RECOMMENDED_COMPAT# de compatibilité, F<debian/control> devra "
 "contenir :"
 
 # type: verbatim
@@ -868,10 +868,10 @@ msgstr ""
 #: debhelper.pod:288
 #, no-wrap
 msgid ""
-"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+"  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 "\n"
 msgstr ""
-" Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+" Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 "\n"
 
 # type: textblock
