--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -763,20 +763,20 @@ msgstr ""
 #: debhelper.pod:279
 msgid ""
 "Tell debhelper what compatibility level to use by writing a number to "
-"F<debian/compat>. For example, to use v#RECOMMEDED_COMPAT# mode:"
+"F<debian/compat>. For example, to use v#RECOMMENDED_COMPAT# mode:"
 msgstr ""
 "Diz ao debhelper qual nível de compatibilidade deve usar ao escrever um "
 "número em F<debian/compat>. Por exemplo, para usar o modo "
-"v#RECOMMEDED_COMPAT#:"
+"v#RECOMMENDED_COMPAT#:"
 
 #. type: verbatim
 #: debhelper.pod:282
 #, no-wrap
 msgid ""
-"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+"  % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 "\n"
 msgstr ""
-"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+"  % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 "\n"
 
 #. type: textblock
@@ -784,22 +784,22 @@ msgstr ""
 msgid ""
 "Your package will also need a versioned build dependency on a version of "
 "debhelper equal to (or greater than) the compatibility level your package "
-"uses. So for compatibility level #RECOMMEDED_COMPAT#, ensure debian/control "
+"uses. So for compatibility level #RECOMMENDED_COMPAT#, ensure debian/control "
 "has:"
 msgstr ""
 "O seu pacote também vai precisar de uma dependência de compilação de versão "
 "de uma versão do debhelper igual (ou maior que) ao nível de compatibilidade "
 "que o seu pacote usa. Portanto para nível de compatibilidade "
-"#RECOMMEDED_COMPAT#, certifique-se que debian/control tem:"
+"#RECOMMENDED_COMPAT#, certifique-se que debian/control tem:"
 
 #. type: verbatim
 #: debhelper.pod:288
 #, no-wrap
 msgid ""
-"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+"  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 "\n"
 msgstr ""
-"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+"  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 "\n"
 
 #. type: textblock
