--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -771,20 +771,20 @@ msgstr ""
 #: debhelper.pod:279
 msgid ""
 "Tell debhelper what compatibility level to use by writing a number to "
-"F<debian/compat>. For example, to use v#RECOMMEDED_COMPAT# mode:"
+"F<debian/compat>. For example, to use v#RECOMMENDED_COMPAT# mode:"
 msgstr ""
 "Schreiben Sie eine Zahl nach F<debian/compat>, um Debhelper mitzuteilen, "
 "welche Kompatibilitätsstufe es nutzen soll. Um beispielsweise den Modus "
-"V#RECOMMEDED_COMPAT# zu benutzen, geben Sie Folgendes ein:"
+"V#RECOMMENDED_COMPAT# zu benutzen, geben Sie Folgendes ein:"
 
 #. type: verbatim
 #: debhelper.pod:282
 #, no-wrap
 msgid ""
-"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+"  % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 "\n"
 msgstr ""
-"  % echo #RECOMMEDED_COMPAT# > debian/compat\n"
+"  % echo #RECOMMENDED_COMPAT# > debian/compat\n"
 "\n"
 
 #. type: textblock
@@ -792,23 +792,23 @@ msgstr ""
 msgid ""
 "Your package will also need a versioned build dependency on a version of "
 "debhelper equal to (or greater than) the compatibility level your package "
-"uses. So for compatibility level #RECOMMEDED_COMPAT#, ensure debian/control "
+"uses. So for compatibility level #RECOMMENDED_COMPAT#, ensure debian/control "
 "has:"
 msgstr ""
 "Ihr Paket wird außerdem eine Bauabhängigkeit mit Versionspflege auf eine "
 "Debhelper-Version benötigen, die gleich (oder größer) als die ist, die von "
 "der Kompatibilitätsstufe Ihres Pakets verwandt wird. Daher müssen Sie für "
-"Kompatibilitätsstufe #RECOMMEDED_COMPAT# sicherstellen, dass debian/control "
+"Kompatibilitätsstufe #RECOMMENDED_COMPAT# sicherstellen, dass debian/control "
 "Folgendes hat:"
 
 #. type: verbatim
 #: debhelper.pod:288
 #, no-wrap
 msgid ""
-"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+"  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 "\n"
 msgstr ""
-"  Build-Depends: debhelper (>= #RECOMMEDED_COMPAT#)\n"
+"  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)\n"
 "\n"
 
 #. type: textblock
