d/changelog: Fix wording of entry
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,9 +13,9 @@ debhelper (10.7) UNRELEASED; urgency=medium
     by gradle-debian-helper.
   * Dh_Lib: Fix bug in doit + doit_* that made them fork a shell in
     some cases.  For backwards compatibility, there is detection code
-    that should make warn for this case.  This can cause a weird
-    "Please specify the compatibility level in debian/compat" error if
-    the tools have chdir to a different directory.
+    that should make it warn for this case and retain bug-compatibility.
+    This can cause a weird "Please specify the compatibility level in
+    debian/compat" error if the tools have chdir to a different directory.
   * Dh_Lib: Support an optional hashref in doit + doit_* to enable some
     trivial operations in the child process (e.g. redirect stdout).
   * dh_installman: Avoid forking a shell where a simple subprocess call
