--- a/debian/changelog
+++ b/debian/changelog
@@ -25,7 +25,7 @@ debhelper (10.7) UNRELEASED; urgency=medium
   * Dh_Lib: Extend autoscript to accept a hashref and use that for
     substituting into the snippet.  This variant (like the subroutine
     variant) avoids forking a lot of subprocesses and need not worry
-    about a shell possible interpreting metacharacters.
+    about a shell possibly interpreting metacharacters.
   * dh_installman: Pass "-l" to man when recoding the manpages.
   * dh_icons: Use hashref based autoscripts generation.
   * dh_installcatalogs: Ditto.
