cmake: Pass -DCMAKE_INSTALL_RUNSTATEDIR=/run [c11]
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -632,6 +632,15 @@ F<./configure>.
 
 =item -
 
+The B<cmake> buildsystem now passes
+B<-DCMAKE_INSTALL_RUNSTATEDIR=/run> to L<cmake(1)>.
+
+B<Caveat>: This option silently does nothing in cmake versions prior
+to 3.8.  Please keep this in mind if your package is regularly
+backported (e.g. to stretch-backports) where cmake is older than 3.8.
+
+=item -
+
 B<dh_installman> will now prefer detecting the language from the
 path name rather than the extension.
 
