--- a/debian/changelog
+++ b/debian/changelog
@@ -59,6 +59,8 @@ debhelper (10.7) UNRELEASED; urgency=medium
     dbgsym packages instead of using xz -1e.  The current default (xz -6)
     is likely to be a better default value for dbgsym packages.  Thanks to
     Adrian Bunk for the suggestion.  (Closes: #868674)
+  * cmake.pm: Pass -DCMAKE_INSTALL_RUNSTATEDIR=/run to cmake in compat 11.
+    Thanks to Felix Geyer for the suggestion.  (Closes: #869697)
 
   [ Colin Watson ]
   * Quote assignment to $recommended_compat in case it isn't a valid Perl
