--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.7+exp.buildlabels) UNRELEASED; urgency=medium
+debhelper (10.7+exp.buildlabels) experimental; urgency=medium
 
   PROTOTYPE: Buildlabels - Experimental feature for making
   different feature builds easier to manage.
@@ -18,7 +18,7 @@ debhelper (10.7+exp.buildlabels) UNRELEASED; urgency=medium
   * dh_missing: Check all source directories for missing files by
     default.
 
- -- Niels Thykier <niels@thykier.net>  Sat, 29 Jul 2017 18:10:48 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 29 Jul 2017 19:50:58 +0000
 
 debhelper (10.7) unstable; urgency=medium
 
