Dh_Lib: Force doit to not use shells with exec
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.7.1) UNRELEASED; urgency=medium
+
+  * Dh_Lib: Fix doit's new call to ensure it does not call a shell
+    (like the documentation promises).
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 30 Jul 2017 10:27:46 +0000
+
 debhelper (10.7) unstable; urgency=medium
 
   [ Niels Thykier ]
