dh: Avoid unintended shell in run()
Anything relying on this would fail under -B or -A builds, so abuse
should have been weeded out by now.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (10.7.1) UNRELEASED; urgency=medium
 
   * Dh_Lib: Fix doit's new call to ensure it does not call a shell
     (like the documentation promises).
+  * dh: Ensure that we do not fork a shell for running a simple
+    command.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 30 Jul 2017 10:27:46 +0000
 
