--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.7.1) UNRELEASED; urgency=medium
+debhelper (10.7.1) unstable; urgency=medium
 
   * Dh_Lib: Fix doit's new call to ensure it does not call a shell
     (like the documentation promises).
@@ -9,7 +9,7 @@ debhelper (10.7.1) UNRELEASED; urgency=medium
     expanded.  E.g. liblockfile relies on ${prefix} being
     unexpanded for DESTDIR to work.  Reopens: #813266
 
- -- Niels Thykier <niels@thykier.net>  Sun, 30 Jul 2017 10:27:46 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 31 Jul 2017 19:00:45 +0000
 
 debhelper (10.7) unstable; urgency=medium
 
