--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (10.7.1+exp.buildlabels) experimental; urgency=medium
+
+  * Re-upload to experimental including changes from 10.7.1.
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 31 Jul 2017 19:40:14 +0000
+
 debhelper (10.7.1) unstable; urgency=medium
 
   * Dh_Lib: Fix doit's new call to ensure it does not call a shell
