--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (10.7.2) UNRELEASED; urgency=medium
+debhelper (10.7.2) unstable; urgency=medium
 
   * Dh_Lib: Fix inverted boolean logic that causes a
     compatibility rule to be ignored.  Thanks to Adrian Bunk,
     Andreas Beckmann, Markus Koschany and Emmanuel Bourg for
     reporting and analysing the issue.  (Closes: #870339)
 
- -- Niels Thykier <niels@thykier.net>  Tue, 01 Aug 2017 16:47:31 +0000
+ -- Niels Thykier <niels@thykier.net>  Tue, 01 Aug 2017 16:51:58 +0000
 
 debhelper (10.7.1) unstable; urgency=medium
 
