--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (10.7.2+exp.buildlabels) experimental; urgency=medium
+
+  * Re-upload to experimental including changes from 10.7.2.
+
+ -- Niels Thykier <niels@thykier.net>  Tue, 01 Aug 2017 17:04:12 +0000
+
 debhelper (10.7.2) unstable; urgency=medium
 
   * Dh_Lib: Fix inverted boolean logic that causes a
