d/changelog: Document previous 2 commits
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (10.7.3) UNRELEASED; urgency=medium
+
+  * Dh_Lib: Introduce a qx_cmd sub to behave like a mix of qx
+    and doit (i.e. avoid the shell while capturing stdout).
+  * dh_makeshlibs: Avoid forking a shell when calling objdump.
+  * dh_shlibdeps: Avoid forking a shell when calling file.
+  * dh_shlibdeps: Avoid passing files with "newline" to
+    subprocesses.
+
+ -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000
+
 debhelper (10.7.2) unstable; urgency=medium
 
   * Dh_Lib: Fix inverted boolean logic that causes a
