dh_makeshlibs: Use qx_cmd in c11
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -698,6 +698,11 @@ helpers that rely on the bug to fail with an error.
 In compatibility 11, there is still a detection for this case.  This
 detection will be removed in compatibility level 12.
 
+=item -
+
+The B<dh_makeshlibs> helper will now exit with an error if objdump
+returns failure code from analysing objdump.
+
 =back
 
 =back
