--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,8 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
 
   * Dh_Lib: Introduce a qx_cmd sub to behave like a mix of qx
     and doit (i.e. avoid the shell while capturing stdout).
-  * dh_makeshlibs: Avoid forking a shell when calling objdump.
+  * dh_makeshlibs: Avoid forking a shell when calling objdump in
+    compat 11.
   * dh_shlibdeps: Avoid forking a shell when calling file.
   * dh_shlibdeps: Avoid passing files with "newline" to
     subprocesses.
